# pwc-demo

./: .env.example  .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_vector_db.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  scalability.md
notebooks/: 01_classification_agent.ipynb  02_extraction_agent.ipynb  03_validation_agent.ipynb  04_summary_agent.ipynb
src/: __init__.py  app.py  config.py
src/agents/: __init__.py  base.py  classifier.py  extractor.py  summarizer.py  validator.py
src/models/: __init__.py  state.py
src/pipeline/: __init__.py  orchestrator.py
src/rag/: __init__.py  embeddings.py  retriever.py  rules.py
src/ui/: __init__.py  components.py  pages.py
src/utils/: __init__.py  file_handler.py  json_parser.py
tests/: __init__.py  conftest.py  test_agents.py  test_rag.py  test_utils.py
